# share_account

./: Cargo.toml  README.md  Settings.toml  build.rs  service.proto  share_account.proto
src/: client.rs  lib.rs  main.rs  phone_server.rs  server.rs  service.rs  service_grpc.rs  share_account.rs  share_account_grpc.rs
