[package]
name = "share_account"
version = "0.0.1"
publish = false
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
grpc            = "0.8.3"
protobuf        = "2"
futures         = "~0.3"
grpc-protobuf   = "0.8.3"
httpbis         = { git = "https://github.com/stepancheg/rust-http2", rev = "04410b1a07f937d94e075c813d05a68022f0c7c8" }
env_logger      = "~0.9"
tonic           = "0.6.2"
anyhow          = "1.0.40"
warp = "0.3"
axum = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.9"

[build-dependencies]
protoc-rust-grpc = "0.8.3"
tonic-build = "0.6.2"
prost = "0.9"


[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[[bin]]
name="main"
path="./src/main.rs"
