[package]
name = "share_account"
version = "0.0.1"
publish = false
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
log = "0.4.0"
env_logger = "~0.9"
tonic = "0.6.2"
axum = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.9"
config = "0.12.0"
lazy_static = "1.4.0"

[build-dependencies]
# protoc-rust-grpc = "0.8.3"
tonic-build = "0.6.2"
prost = "0.9"


[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="phone"
path="./src/phone_server.rs"

[[bin]]
name="main"
path="./src/main.rs"
